--- a/index.html
+++ b/index.html
@@ -1,21 +1,41 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-
-  <title>Lab 02</title>
-  
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/reset.css">
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
-
 <body>
+  <title>About me</title>
+
+  <header>Bio</header>
   <main>
-
+  <p>Hello my name is JJ, i am prior military. I love to walk on the beach with my socks on.</p>
   
-  <script src="./js/app.js"></script>
+  <ol>
+    <li>My favorite team is Eagles for football</li>
+    <li>My favorite team is Celtics for basketball</li>
 
+  </ol>
+
+<script src="./js/app.js"></script>
 </main>
+<footer style="position: absolute; bottom: 0">
+  <h3>Top Ten Movies</h3>
+  <ol>
+    <li>300</li>
+    <li>21 Bridges</li>
+    <li>Transformers</li>
+    <li>Shooter</li>
+    <li>Alien 1</li>
+    <li>Alien 2</li>
+    <li>Alien 3</li>
+    <li>Predator</li>
+    <li>Predator 2</li>
+    <li>Redemption</li>
+  </ol>
+
+</footer>
 </body>
 </html>
