--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="styles.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <h1 style="color:blue;">A Blue Heading</h1>
+
 </head>
 <body>
   <title>About me</title>
-
+  
   <header>Bio</header>
   <main>
   <p>Hello my name is JJ, i am prior military. I love to walk on the beach with my socks on.</p>
