--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
-  <h1 style="color:blue;">A Blue Heading</h1>
+  <h1 style="color:blue;">About JJ</h1>
 
 </head>
 <body>
