--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   </ol>
 
-<script src="./js/app.js"></script>
+<script src="app.js"></script>
 </main>
 <footer style="position: absolute; bottom: 0">
   <h3>Top Ten Movies</h3>
