--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="styles.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
-  <h1 style="color:blue;">About JJ</h1>
+  <link rel="stylesheet" href="css/style.css">
+  <h1 style="color:rgb(115, 16, 214);">About JJ</h1>
 
 </head>
 <body>
@@ -23,7 +22,6 @@
 
   </ol>
 
-<script src="app.js"></script>
 </main>
 <footer style="position: absolute; bottom: 0">
   <h3>Top Ten Movies</h3>
@@ -41,5 +39,6 @@
   </ol>
 
 </footer>
+<script src="js/app.js"></script>
 </body>
 </html>
